syntax = "proto3";

package zerorobot;

//are
message Domain {
    string guid = 1;
    string name = 2;
    //pubkey e.g. used to verify signature of the code, this to make sure that original authors produced the code
    repeated string pubkey = 3;     
    repeated string giturl = 4;
    string description = 5;
    repeated string company = 6;
    repeated string url = 7;
    repeated string email = 8;
}

message DomainPointer {
    string guid = 1;
    string name = 2;
}
