syntax = "proto3";

package zerorobot;

import "domain.proto";

message Template {
  string guid = 1;
  string previous = 2; //to find previous versions of this one, is guid  
  string name = 3;
  int32 version = 4;  
  DomainPointer domain = 5;
  
  enum TemplateStatus {
    NEW = 0;
    OK = 1;
    ERROR = 2;
    DISABLED = 3;
  }

  TemplateStatus status = 6;
  repeated TemplateConsumption consumptions = 7;
  TemplateParent parent = 8;

  repeated TemplateAction actions = 9;

  string dataschema = 10; // .proto schema of the data obj liked to this template

  //optional link to git
  repeated string giturl = 4;
  

}

message TemplatePointer {
    string guid = 1;
    string name = 2;
    DomainPointer domain = 3;  
}  

message TemplateConsumption {
    string template_name = 1;
    int32 template_minversion = 2; //min version of template    
    Domain template_domain = 3;
    int32 min_nr = 4;
    int32 max_nr = 5;
    bool auto = 6; 
    string argname = 7; // key in the args that contains the instance name of the targets
}

message TemplateParent {
    string template_name = 1;
    Domain template_domain = 2;
    int32 template_minversion = 3; //min version of template
    string argname = 4; // key in the args that contains the instance name of the targets
    
}


message TemplateActionConsumption {
    string template_name = 1;
    string action_name = 2;
}

message TemplateAction {
    string name = 1;
    string code = 2;
    repeated TemplateActionConsumption consumptions = 3;
}    
 